# sbis

./: .gitignore  README.md  config.ini  db.sqlite3  debug.py  helpers.py  manage.py  pyproject.toml  run.py  test.py
FILES/: TTN_HISTORY_F2_REG.xml  TTN_INFORM_F2_REG.xml  WAY_BILL_IN.xml  format.xml
Hotel/: admin.py  apps.py  const.py  models.py  request_helpers.py  views.py
Hotel/migrations/: 0001_initial.py  0002_activeintervalsbrs_booking_eventbrs_delete_chart.py
HotelDjango/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  index.html
